--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,13 @@ body {
   font-size: large;
 }
 
+/* Select all rows from the table, exclude last row and select even rows only */
+.list-table > :not(tr.last-row):not(:first-child):nth-child(odd) {
+  background-color: rgb(220, 220, 220);
+}
+
 /* Applies the CSS to only those rows and its descendants when the row's class name is list-table-last-row*/
-tr.list-table-last-row > * {
+.list-table tr.last-row > * {
   border-style: solid;
   border-width: 2px 0px 2px 0px;
   border-color: rgb(150, 150, 150);
@@ -86,7 +91,7 @@ tr.list-table-last-row > * {
   */
 
   /* width: 100%; */
-  height: 100%;
+  /* height: 100%; */
 }
 
 .banner {
@@ -140,6 +145,6 @@ TODO: Refactor into its own file
 
 .add-item-container {
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr 1fr;
+  grid-template-columns: 3fr 7fr 2fr 1fr;
   column-gap: 2%;
 }
